# middle-manager

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  docker-compose.yml  flake.nix  justfile  making_issues.json
.github/workflows/: ci.yml  flake.yml  nix-build.yml
config/: default.toml
crates/mm-cli/: Cargo.toml
crates/mm-cli/src/: lib.rs  main.rs
crates/mm-cli/tests/: tasks.rs
crates/mm-core/: Cargo.toml
crates/mm-core/src/: config.rs  error.rs  lib.rs  ports.rs  root.rs  service.rs  test_utils.rs
crates/mm-core/src/mcp/: create_entity.rs  get_entity.rs  mod.rs
crates/mm-core/src/operations/: add_observations.rs  common.rs  create_entity.rs  create_relationship.rs  delete_relationships.rs  get_entity.rs  get_git_status.rs  get_project_context.rs  list_projects.rs  mod.rs  remove_all_observations.rs  remove_observations.rs  set_observations.rs  update_entity.rs  update_relationship.rs
crates/mm-core/src/operations/git/: mod.rs  status.rs  types.rs
crates/mm-core/src/operations/memory/: common.rs  create_entity.rs  create_relationship.rs  delete_entities.rs  delete_relationships.rs  find_entities_by_labels.rs  find_related_entities.rs  find_relationships.rs  generic.rs  get_entity.rs  get_graph_meta.rs  get_project_context.rs  list_projects.rs  mod.rs  update_entity.rs  update_relationship.rs
crates/mm-core/src/operations/memory/git/: types.rs
crates/mm-core/src/operations/memory/projects/: mod.rs  types.rs
crates/mm-core/src/operations/memory/tasks/: create_task.rs  create_tasks.rs  delete_task.rs  get_task.rs  list_tasks.rs  mod.rs  types.rs  update_task.rs
crates/mm-core/src/operations/projects/: types.rs
crates/mm-core/src/operations/tasks/: create_task.rs  delete_task.rs  get_task.rs  mod.rs  types.rs  update_task.rs
crates/mm-core/src/utils/: mod.rs
crates/mm-git/: Cargo.toml
crates/mm-git-git2/: Cargo.toml
crates/mm-git-git2/src/: lib.rs  repository.rs
crates/mm-git-git2/tests/: git2_repository.rs
crates/mm-git-libgit2/: Cargo.toml
crates/mm-git-libgit2/src/: lib.rs
crates/mm-git/src/: error.rs  lib.rs  repository.rs  service.rs  status.rs
crates/mm-memory/: Cargo.toml  schema.json
crates/mm-memory-neo4j/: Cargo.toml
crates/mm-memory-neo4j/src/: lib.rs
crates/mm-memory-neo4j/src/adapters/: conversions.rs  mod.rs  neo4j.rs
crates/mm-memory-neo4j/src/adapters/neo4j/: config.rs  helpers.rs  mod.rs  repository.rs
crates/mm-memory-neo4j/src/domain/: entity.rs  error.rs
crates/mm-memory-neo4j/src/ports/: mod.rs  repository.rs
crates/mm-memory-neo4j/src/service/: memory.rs
crates/mm-memory-neo4j/tests/: neo4j_integration.rs
crates/mm-memory/src/: config.rs  entity.rs  error.rs  label_match_mode.rs  labels.rs  lib.rs  project_context.rs  relationship.rs  relationship_direction.rs  repository.rs  service.rs  test_helpers.rs  test_suite.rs  update.rs  validation_error.rs  value.rs
crates/mm-memory/src/adapters/: neo4j.rs
crates/mm-memory/src/domain/: entity.rs  error.rs  mod.rs  validation_error.rs
crates/mm-memory/src/ports/: repository.rs
crates/mm-memory/src/service/: memory.rs
crates/mm-memory/tests/: neo4j_integration.rs  service_fuzz.rs
crates/mm-server/: Cargo.toml
crates/mm-server/src/: config.rs  lib.rs  main.rs  resources.rs  roots.rs
crates/mm-server/src/mcp/: add_observations.rs  create_entities.rs  create_entity.rs  create_relationship.rs  create_relationships.rs  create_task.rs  create_tasks.rs  delete_entities.rs  delete_relationships.rs  delete_task.rs  error.rs  find_entities_by_labels.rs  find_related_entities.rs  find_relationships.rs  get_entity.rs  get_git_status.rs  get_graph_meta.rs  get_project_context.rs  get_task.rs  git_status.rs  list_projects.rs  list_tasks.rs  macros.rs  mod.rs  remove_all_observations.rs  remove_observations.rs  result_helpers.rs  set_observations.rs  update_entity.rs  update_relationship.rs  update_task.rs
crates/mm-server/src/mcp/tests/: mod.rs
crates/mm-server/tests/: tool_fuzz.rs
crates/mm-utils/: Cargo.toml
crates/mm-utils/src/: json_schema.rs  lib.rs  prop.rs
