[workspace]
members = ["crates/mm-cli", "crates/mm-core", "crates/mm-memory-neo4j", "crates/mm-server"]
resolver = "3"
default-members = ["crates/mm-cli"]

[workspace.dependencies]
rust-mcp-sdk = "0.4.2"
async-trait = "0.1"
tokio = "1"
tracing = "0.1"
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mockall = "0.12.1"
