[workspace]
members = [
    "crates/mm-cli",
    "crates/mm-core",
    "crates/mm-memory",
    "crates/mm-memory-neo4j",
    "crates/mm-git",
    "crates/mm-git-git2",
    "crates/mm-server",
    "crates/mm-utils",
]
resolver = "3"
default-members = ["crates/mm-cli"]

[workspace.dependencies]
rust-mcp-sdk = "0.4.2"
async-trait = "0.1"
tokio = "1"
tracing = "0.1"
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mockall = "0.12.1"
arbitrary = "1"
rand = "0.8"
fastrand = "2"
arbtest = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
schemars = { version = "1.0.0-rc.2", features = ["derive"] }
futures = "0.3"
strum = "0.27"
strum_macros = "0.27"
