[package]
name = "mm-cli"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
default-run = "mm-cli"

[dependencies]
mm-server = { path = "../mm-server" }
clap = { version = "4.4", features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
