[package]
name = "mm-cli"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
default-run = "mm-cli"

[lib]
path = "src/lib.rs"

[dependencies]
mm-server = { path = "../mm-server" }
mm-git-git2 = { path = "../mm-git-git2" }
clap = { version = "4.4", features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
serde_json = { workspace = true }
tabled = "0.20"
rust-mcp-sdk = { workspace = true }
