[package]
name = "mm-core"
version = "0.1.0"
edition = "2024"

[dependencies]
mm-memory = { path = "../mm-memory" }
config = "0.15.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
tracing = "0.1"
async-trait = { workspace = true }

[dev-dependencies]
mockall = "0.12.1"
tokio = { version = "1", features = ["full", "test-util"] }
