[package]
name = "mm-core"
version = "0.1.0"
edition = "2024"

[dependencies]
mm-memory-neo4j = { path = "../mm-memory-neo4j" }
config = "0.15.11"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
