[package]
name = "mm-git"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
schemars = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
mockall = { workspace = true, optional = true }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }

[features]
mock = ["mockall"]
