[package]
name = "mm-memory-neo4j"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
neo4rs = { version = "0.7.3", features = ["json"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
mm-memory = { path = "../mm-memory" }
time = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
mm-memory = { path = "../mm-memory", features = ["mock", "test-suite"] }
