[package]
name = "mm-memory"
version = "0.1.0"
edition = "2024"

[features]
mock = ["mockall"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
mockall = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
mockall = { workspace = true }
