[package]
name = "mm-memory"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[features]
mock = ["mockall"]
test-suite = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
mockall = { workspace = true, optional = true }
mm-utils = { path = "../mm-utils" }
rust-mcp-sdk = { workspace = true }
tracing = { workspace = true }
time = { workspace = true, features = ["formatting", "parsing", "serde"] }
schemars = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
mockall = { workspace = true }
arbitrary = { workspace = true }
