[package]
name = "mm-server"
version = "0.1.0"
edition = "2024"

# Specify this is a library crate only
[lib]
name = "mm_server"
path = "src/lib.rs"

[dependencies]
mm-core = { path = "../mm-core" }
mm-memory = { path = "../mm-memory" }
tokio = { version = "1", features = ["full"] }
rust-mcp-sdk = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1.0"
async-trait = { workspace = true }
