[package]
name = "mm-server"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

# Specify this is a library crate only
[lib]
name = "mm_server"
path = "src/lib.rs"

[dependencies]
mm-core = { path = "../mm-core" }
mm-memory-neo4j = { path = "../mm-memory-neo4j" }
mm-memory = { path = "../mm-memory" }
mm-git = { path = "../mm-git" }
mm-git-git2 = { path = "../mm-git-git2" }
mm-utils = { path = "../mm-utils" }
tokio = { workspace = true, features = ["full"] }
rust-mcp-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = "1.0"
async-trait = { workspace = true }
config = "0.15.11"
clap = { version = "4.4", features = ["derive"] }
schemars = { workspace = true }

[dev-dependencies]
mm-memory = { path = "../mm-memory", features = ["mock"] }
mm-git = { path = "../mm-git", features = ["mock"] }
mm-core = { path = "../mm-core", features = ["mock"] }
tokio = { workspace = true, features = ["full", "test-util"] }
mockall = { workspace = true }
mm-utils = { path = "../mm-utils" }
arbitrary = { workspace = true }
